src/pages/index.module.css
.infoContainer {
    height: 100%;
    max-width: 823px;
    background-color: #fff;
    margin: 0;
    padding: 20px 20px 12px 20px;
    /* overflow-y: auto; */
}

.mainContainer {
    background-color: #fff;
    box-shadow: 0 0 12px 0 rgb(0, 0, 0, 0.15);
    flex-basis: 40%;
    height: 100%;
    order: 1;
    overflow-y: auto;
    top: 60px;
    z-index: 50 !important;
}

.mapContainer {
    height: 100%;
    top: calc(60px + 50px);
    order: 2;
    flex-basis: 60%;
    z-index: 2;
}

.welcomeHeader {
    margin: 8px 0 14px 0 !important;
}

@media screen and (max-width: 800px) {
    .mainContainer {
        flex-basis: 60%;
    }
    .mapContainer {
        flex-basis: 40%;
        height: 100%;
        order: 1;
    }
}

